1999-10-30  Michael Natterer  <mitch@gimp.org>

	* app/lc_dialog.c: removed the GimpImage "destroy" callback
	because we already get notified of this event by connecting to the
	image context's "remove" signal.

1999-10-30  Michael Natterer  <mitch@gimp.org>

	* app/ops_buttons.[ch]: added a private tooltip to the
	ops_buttons structure. Removed ops_buttons_set_insensitive().

	* app/channels_dialog.c
	* app/layers_dialog.c
	* app/paths_dialog.c
	* app/lc_dialog.c: let the ops button's private tips point at the
	already existing help pages. Minor fixes.

1999-10-30  Michael Natterer  <mitch@gimp.org>

	* app_procs.c
	* app/commands.[ch]
	* app/interface.c
	* app/menus.c
	* app/session.c
	* app/tools.[ch]: namespace cleanups: changed the
	"tools_options_*" functions to "tool_options_*" and prefixed all
	dialog menu callbacks with "dialogs_*".
	Allow dropping a tool to the tool options dialog.

	* app/bezier_select.c: change the active tool using context
	functions.

	* app/dialog_handler.[ch]: replaced the uppercase datatype names
	by standard mixed upper/lowercase ones. Provide a function to
	register the fileload dialog instead of accessing it as global
	variable.

	* app/disp_callbacks.c: switch to the move tool using context
	functions. Fixed the drop color/pattern functions to convert the
	dropped thing to the dest. image's color space.

	* app/fileops.c: don't export the fileload dialog as global
	variable but register it with the dialog handler instead.

	* app/paths_dialog.[ch]: replaced all the uppercase struct names
	defined here by mixed upper/lowercase. Introduced a
	"set_menu_sensitivity" function like in layers/channels instead of
	calling single button on/off functions from various places.
	Added a menu entry for "Selection to Path".

1999-10-30  Tor Lillqvist  <tml@iki.fi>

	* plug-ins/common/wmf.c: Fix a couple of bugs: Must call
	make_canvas if necessary when handling CreateFontIndirect. Must